# antnest

./: .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  PLAN.md  README.md  containers.md  host.md  infra.yaml  issues.md  secrets.md  services.md
.cursor/rules/: specs.mdc
docs/: changelog.md  credentials-migration.md  infrastructure-roadmap.md  quick-start.md
examples/: example-container.md  example-host.md  example-service.md
nestor_orchestrator/: pyproject.toml
nestor_orchestrator/nestor_orchestrator/: README.md  __init__.py.md  graph.py  graph.py.md  main.py  main.py.md
nestor_orchestrator/nestor_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: container-template.md  host-template.md  service-template.md
